--- a/db/templates/base.html
+++ b/db/templates/base.html
@@ -67,7 +67,7 @@ html,body {
 	</script>
 
 {% block head %}
-<title>HMS 1000 Molecules</title> {% endblock %}
+<title>HMS 1000 Molecules DB</title> {% endblock %}
 
 </head>
 
@@ -82,7 +82,7 @@ html,body {
 						<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 							class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#">1000 Molecules</a>
+					<a class="brand" href="#">HMS 1000 Molecules DB</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
 							<li class="active"><a href="#">Home</a></li>
